--- a/CheckersDemo/Client/_Imports.razor
+++ b/CheckersDemo/Client/_Imports.razor
@@ -9,3 +9,4 @@
 @using CheckersDemo.Client
 @using CheckersDemo.Client.Data
 @using CheckersDemo.Client.Shared
+@using Microsoft.AspNetCore.SignalR.Client
