--- a/CheckersDemo/Client/_Imports.razor
+++ b/CheckersDemo/Client/_Imports.razor
@@ -10,3 +10,5 @@
 @using CheckersDemo.Client.Data
 @using CheckersDemo.Client.Shared
 @using Microsoft.AspNetCore.SignalR.Client
+@using CheckersDemo.Client.Managers
+@using CheckersDemo.Shared
