--- a/CheckersDemo/Client/wwwroot/css/main.scss
+++ b/CheckersDemo/Client/wwwroot/css/main.scss
@@ -42,7 +42,7 @@ $white-cell: #fff6bd;
     }
 
     &__cell {
-        border: 1px solid silver;
+        border: 1px solid #808080;
         margin: 0 0 -1px -1px;
         width: 80px;
         height: 80px;
@@ -50,18 +50,41 @@ $white-cell: #fff6bd;
         display: flex;
         justify-content: center;
         align-items: center;
+        transition: 0.3s;
+        box-shadow: inset 0 0 0 2px rgba(#008000, 0);
+        position: relative;
 
         &-active {
-            box-shadow: inset 0 0 0 3px green;
+            &::before {
+            content: "";
+            display: block;
+            position: absolute;
+            transform: translate(-50%, -50%);
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            background-color: #ff0000;
+            top: 50%;
+            left: 50%;
+        }
+            //box-shadow: inset 0 0 0 2px rgba(#008000, 1);
             cursor: pointer;
         }
     }
 }
 
 
+.checker_container{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
 .checker {
     border-radius: 50%;
-    border: 1px solid #868686;
+    //border: 1px solid #868686;
     width: 80%;
     height: 80%;
     position: relative;
@@ -85,7 +108,8 @@ $white-cell: #fff6bd;
     }
 
     &-enabled {
-        &::after {
+        box-shadow: 0 0 0 2px green;
+        /*&::after {
             content: "E";
             display: block;
             position: absolute;
@@ -93,26 +117,27 @@ $white-cell: #fff6bd;
             top: 50%;
             left: 50%;
         }
-        cursor: pointer;
-    }
+*/
+            cursor: pointer;
+        }
 
-    &-active {
-        box-shadow: 0 0 0 3px green;
-    }
+        &-active {
+            box-shadow: 0 0 0 4px #ff6d00 !important;
+        }
 
-    &-king {
-        &::before {
-            content: "";
-            width: 55px;
-            height: 55px;
-            display: block;
-            position: absolute;
-            transform: translate(-50%, -51%);
-            top: 50%;
-            left: 50%;
-            border-width: 2px;
-            border-style: solid;
-            border-radius: 50%;
+        &-king {
+            &::before {
+                content: "";
+                width: 55px;
+                height: 55px;
+                display: block;
+                position: absolute;
+                transform: translate(-50%, -51%);
+                top: 50%;
+                left: 50%;
+                border-width: 2px;
+                border-style: solid;
+                border-radius: 50%;
+            }
         }
     }
-}
